--- a/国际会议.md
+++ b/国际会议.md
@@ -1,5 +1,5 @@
 
-#（数据库）
+# 数据库 
 
 ## 一、A类
 
@@ -72,406 +72,107 @@
 
  
 
-中国计算机学会推荐国际学术会议
+# 人工智能与模式识别
 
-（人工智能与模式识别）
+## 一、A类
 
-一、A类
+会议简称  会议全称   出版社
 
-会议简称
+[IJCAI| International Joint Conference on Artificial Intelligence| Morgan Kaufmann](http://www.ijcai.org)
 
-会议全称
+[ICCV| International Conference on Computer Vision| IEEE](http://iccv2007.rutgers.edu/)
 
-出版社
+[ICML| International Conference on Machine Learning| ACM](http://oregonstate.edu/conferences/icml2007/)
 
-网址
+[CVPR| IEEE Conference on Computer Vision and Pattern Recognition| IEEE](http://www.cvpr.org/)
 
-IJCAI
-
-International Joint Conference on Artificial Intelligence
-
-Morgan Kaufmann
-
-http://www.ijcai.org
-
-ICCV
-
-International Conference on Computer Vision
-
-IEEE
-
-http://iccv2007.rutgers.edu/
-
-ICML
-
-International Conference on Machine Learning
-
-ACM
-
-http://oregonstate.edu/conferences/icml2007/
-
-CVPR
-
-IEEE Conference on Computer Vision and Pattern Recognition
-
-IEEE
-
-http://www.cvpr.org/
-
-AAAI
-
-AAAI Conference on Artificial Intelligence
-
-AAAI
-
-http://www.aaai.org
+[AAAI| AAAI Conference on Artificial Intelligence| AAAI](http://www.aaai.org)
 
  
 
-二、B类
+## 二、B类
 
-会议简称
+[NIPS| Annual Conference on Neural Information Processing Systems| MIT Press](http://www.nips.cc)
 
-会议全称
+[KR| International Conference on Principles of Knowledge Representation and Reasoning| Morgan Kaufmann](http://www.kr.org/)
 
-出版社
+[ACL| Annual Meeting of the Association for Computational Linguistics| ACL](http://www.aclweb.org/)
 
-网址
+[AAMAS| International Joint Conference on Autonomous Agents and Multi-agent Systems| Springer](http://www.aamas2007.org/)
 
-NIPS
+[ECCV| European Conference on Computer Vision| Springer](http://eccv2008.inrialpes.fr/)
 
-Annual Conference on Neural Information Processing Systems
+[ECML| European Conference on Machine Learning|Springer](http://www.ecmlpkdd2008.org)
 
-MIT Press
+[ECAI| European Conference on Artificial Intelligence| IOS Press](http://www.ece.upatras.gr/ecai2008/)
 
-http://www.nips.cc
+[COLT| Annual Conference on Computational Learning Theory| Springer](http://www.learningtheory.org/colt2007/)
 
-KR
+[UAI| International Conference on Uncertainty in Artificial Intelligence| AUAI](http://auai.org/)
 
-International Conference on Principles of Knowledge Representation and Reasoning
+[ICAPS| International Conference on Automated Planning and Scheduling| AAAI](http://icaps07.icaps-conference.org/)
 
-Morgan Kaufmann
+[ICCBR| International Conference on Case-Based Reasoning| Springer](http://www.iccbr.org/)
 
-http://www.kr.org/
+[COLING| International Conference on Computational Linguistics| ACM](http://www.coling2008.org.uk/)
 
-ACL
+[ALT| International Conference on Algorithmic Learning Theory| Springer](http://www-alg.ist.hokudai.ac.jp/~thomas/ALT07/alt07.jhtml)
 
-Annual Meeting of the Association for Computational Linguistics
+[ILP| International Conference on Inductive Logic Programming| Springer](http://oregonstate.edu/conferences/ilp2007/)
 
-ACL
+[ICRA| IEEE International Conference on Robotics and Automation| IEEE](http://www.icra07.org/)
 
-http://www.aclweb.org/
+[CogSci| Cognitive Science Society Annual Conference| Psychology Press](http://www.cognitivesciencesociety.org/cogsci.html)
 
- 
+[IJCAR| International Joint Conference on Automated Reasoning]()
 
- 
-
- 
+[EMNLPConference on Empirical Methods in Natural Language Processing| ACL](http://www.cs.jhu.edu/~yarowsky/SIGDAT/emnlp06.html)
 
  
 
-AAMAS
+## 三、C类
 
-International Joint Conference on Autonomous Agents and Multi-agent Systems
+[PRICAI| Pacific Rim International Conference on Artificial Intelligence| Springer](http://www.pricai.org/)
 
-Springer
+[NAACL| The Annual Conference of the North American Chapter of the Association for Computational Linguistics| NAACL](http://www.cs.rochester.edu/meetings/hlt-naacl07/)
 
-http://www.aamas2007.org/
+[ACCV| Asian Conference on Computer Vision| Springer](http://www.am.sanken.osaka-u.ac.jp/ACCV2007/)
 
-ECCV
+[IJCNN| International Joint Conference on Neural Networks| IEEE](http://www.ijcnn2007.org/)
 
-European Conference on Computer Vision
+[ICASSP| IEEE International Conference on Acoustics, Speech and SP| IEEE](http://www.icassp2007.org/)
 
-Springer
+[DS| International Conference on Discovery Science| Springer](http://www.i.kyushu-u.ac.jp/~ds07/)
 
-http://eccv2008.inrialpes.fr/
+[ICTAI| IEEE International Conference on Tools with Artificial Intelligence| IEEE](http://ictai07.ceid.upatras.gr/)
 
-ECML
+[ICANN| International Conference on Artificial Neural Networks| Springer](http://www.icann2007.org/)
 
-European Conference on Machine Learning
+[ICDAR| International Conference on Document Analysis and Recognition| IEEE](http://www.icdar2007.org/)
 
-Springer
+[GECCO| Genetic and Evolutionary Computation Conference| ACM](http://www.sigevo.org/gecco-2006/index.html)
 
-http://www.ecmlpkdd2008.org
+[CEC| IEEE Congress on Evolutionary Computation| IEEE](http://cec2007.nus.edu.sg/)
 
-ECAI
+[FUZZ-IEEE| IEEE International Conference on Fuzzy Systems| IEEE](http://www.fuzzieee2007.org/)
 
-European Conference on Artificial Intelligence
+[IJCNLP| International Joint Conference on Natural Language Processing| ACL](http://www.ijcnlp2008.org/)
 
-IOS Press
+[ICONIP| International Conference on Neural Information Processing| Springer](http://www.iconip07.org/)
 
-http://www.ece.upatras.gr/ecai2008/
-
-COLT
-
-Annual Conference on Computational Learning Theory
-
-Springer
-
-http://www.learningtheory.org/colt2007/
-
-UAI
-
-International Conference on Uncertainty in Artificial Intelligence
-
-AUAI
-
-http://auai.org/
-
-ICAPS
-
-International Conference on Automated Planning and Scheduling
-
-AAAI
-
-http://icaps07.icaps-conference.org/
-
-ICCBR
-
-International Conference on Case-Based Reasoning
-
-Springer
-
-http://www.iccbr.org/
-
-COLING
-
-International Conference on Computational Linguistics
-
-ACM
-
-http://www.coling2008.org.uk/
-
-ALT
-
-International Conference on Algorithmic Learning Theory
-
-Springer
-
-http://www-alg.ist.hokudai.ac.jp/~thomas/ALT07/alt07.jhtml
-
-ILP
-
-International Conference on Inductive Logic Programming
-
-Springer
-
-http://oregonstate.edu/conferences/ilp2007/
-
-ICRA
-
-IEEE International Conference on Robotics and Automation
-
-IEEE
-
-http://www.icra07.org/
-
-CogSci
-
-Cognitive Science Society Annual Conference
-
-Psychology Press
-
-http://www.cognitivesciencesociety.org/cogsci.html
-
-IJCAR
-
-International Joint Conference on Automated Reasoning
+[CVIR| International Conference on Content based Image and Video Retrieval| ACM]()
 
  
 
- 
+[FGR| International Conference on Face and Gesture Recognition| IEEE]()
 
-EMNLP
 
-Conference on Empirical Methods in Natural Language Processing
+[ICB| International Conference on Biometrics| IEEE]()
 
-ACL
+[CoNLL| Conference on Natural Language Learning |CoNLL](http://www.cnts.ua.ac.be/conll2007/)
 
-http://www.cs.jhu.edu/~yarowsky/SIGDAT/emnlp06.html
+[KSEM| International conference on Knowledge Science, Engineering and Management| Springer](http://www.deakin.edu.au/scitech/eit/ksem07/)
 
- 
+[ICPR| International Conference on Pattern Recognition| IEEE](www.icpr2008.org/)
 
-三、C类
-
- 
-
-会议简称
-
-会议全称
-
-出版社
-
-网址
-
-PRICAI
-
-Pacific Rim International Conference on Artificial Intelligence
-
-Springer
-
-http://www.pricai.org/
-
-NAACL
-
-The Annual Conference of the North American Chapter of the Association for Computational Linguistics
-
-NAACL
-
-http://www.cs.rochester.edu/meetings/hlt-naacl07/
-
- 
-
- 
-
- 
-
- 
-
-ACCV
-
-Asian Conference on Computer Vision
-
-Springer
-
-http://www.am.sanken.osaka-u.ac.jp/ACCV2007/
-
-IJCNN
-
-International Joint Conference on Neural Networks
-
-IEEE
-
-http://www.ijcnn2007.org/
-
-ICASSP
-
-IEEE International Conference on Acoustics, Speech and SP
-
-IEEE
-
-http://www.icassp2007.org/
-
-DS
-
-International Conference on Discovery Science
-
-Springer
-
-http://www.i.kyushu-u.ac.jp/~ds07/
-
-ICTAI
-
-IEEE International Conference on Tools with Artificial Intelligence
-
-IEEE
-
-http://ictai07.ceid.upatras.gr/
-
-ICANN
-
-International Conference on Artificial Neural Networks
-
-Springer
-
-http://www.icann2007.org/
-
-ICDAR
-
-International Conference on Document Analysis and Recognition
-
-IEEE
-
-http://www.icdar2007.org/
-
-GECCO
-
-Genetic and Evolutionary Computation Conference
-
-ACM
-
-http://www.sigevo.org/gecco-2006/index.html
-
-CEC
-
-IEEE Congress on Evolutionary Computation
-
-IEEE
-
-http://cec2007.nus.edu.sg/
-
-FUZZ-IEEE
-
-IEEE International Conference on Fuzzy Systems
-
-IEEE
-
-http://www.fuzzieee2007.org/
-
-IJCNLP
-
-International Joint Conference on Natural Language Processing
-
-ACL
-
-http://www.ijcnlp2008.org/
-
-ICONIP
-
-International Conference on Neural Information Processing
-
-Springer
-
-http://www.iconip07.org/
-
-CVIR
-
-International Conference on Content based Image and Video Retrieval
-
-ACM
-
- 
-
-FGR
-
-International Conference on Face and Gesture Recognition
-
-IEEE
-
- 
-
-ICB
-
-International Conference on Biometrics
-
-IEEE
-
- 
-
-CoNLL
-
-Conference on Natural Language Learning
-
-CoNLL
-
-http://www.cnts.ua.ac.be/conll2007/
-
-KSEM
-
-International conference on Knowledge Science, Engineering and Management
-
-Springer
-
-http://www.deakin.edu.au/scitech/eit/ksem07/
-
-ICPR
-
-International Conference on Pattern Recognition
-
-IEEE
-
-www.icpr2008.org/
-
-COSIT
-
-International Conference on Spatial Information Theory
+[COSIT| International Conference on Spatial Information Theory]()
