--- a/3D_Object_Detection/深度图补全.md
+++ b/3D_Object_Detection/深度图补全.md
@@ -15,11 +15,20 @@
     
 # 什么原理？
 ![](https://pic4.zhimg.com/v2-f2d2fdaaf8a063236bf9418291fee227_b.jpg)
+
     Deep depth completion算法流程如下，
     其输入是RGB-D相机拍摄的一张RGB图像和对应的深度图，
     然后根据分别训练好的两个网络（一个是针对RGB图表面法线的深度学习网络，一个是针对物体边缘遮挡的深度学习网络），
     预测该彩色图像中所有平面的表面法线和物体边缘遮挡。
     最后用深度图作为正则化，求解一个全局线性优化问题，最终得到补全的深度图。
 
+# 数据集准备
+![](https://pic3.zhimg.com/v2-e704bafc1a016437142c6b9a71f132aa_b.jpg)
+
+    他们利用现有的消费级RGB-D相机拍摄的数据集（Matterport3D、ScanNet、SUN3D、SceneNN）先进行稠密的三维重建，然后再进行优化和渲染。
+    虽然单一视角的深度图可能会有因为不同原因引起的缺失，但是经过多个不同视角的重建和优化，这些缺失的地方都被填补了。
+    然后将其深度结果反投影回到输入深度图。最后得到的深度图就是groundtruth啦，简直完美！
+    省时省力省钱，还顺带学习了稠密三维重建，就是这么棒！看看下面的图，
+    还是比较形象的，黄色代表不同视点的图，红色是当前视点渲染后的深度图。
 
 
