--- a/vSLAM/彩色图去色.md
+++ b/vSLAM/彩色图去色.md
@@ -26,7 +26,7 @@
     grayscale – Output 8-bit 1-channel image.
     color_boost – Output 8-bit 3-channel image.
     
-[论文3  Real-time Contrast Preserving Decolorization](http://www.cse.cuhk.edu.hk/leojia/papers/siga12t_color2gray.pdf)
+[论文3  Real-time Contrast Preserving Decolorization](http://www.cse.cuhk.edu.hk/leojia/papers/siga12t_color2gray.pdf)[代码](https://github.com/Ewenwan/rtcprgb2gray)
     
     速度快
     他没有像第二篇那样采用了二维的模型，而是简化为一维模型，
