Update and rename 彩色图去色.md to 彩色图去色&抠图.md

--- a/vSLAM/彩色图去色&抠图.md
+++ b/vSLAM/彩色图去色&抠图.md
@@ -1,4 +1,4 @@
-# 对比度保留之彩色图像去色算法
+# 1. 对比度保留之彩色图像去色算法
 
 [参考](https://www.cnblogs.com/Imageshop/p/3430742.html)
 
@@ -50,4 +50,11 @@
     
 
     
-        
+# 2. 抠图技术 Image Matting
+[参考](https://blog.csdn.net/On_theway10/article/details/81873538)
+    
+[A global sampling method for alpha matting](https://github.com/Ewenwan/global-matting)
+
+[Natural-image-matting](https://github.com/Rnandani/Natural-image-matting)
+
+
