--- a/vSLAM/彩色图去色&抠图.md
+++ b/vSLAM/彩色图去色&抠图.md
@@ -58,3 +58,6 @@
 [Natural-image-matting](https://github.com/Rnandani/Natural-image-matting)
 
 
+# 3. 导向滤波
+[Guided filter for OpenCV](https://github.com/Ewenwan/guided-filter)
+
