--- a/vSLAM/彩色图去色&抠图.md
+++ b/vSLAM/彩色图去色&抠图.md
@@ -58,6 +58,6 @@
 [Natural-image-matting](https://github.com/Rnandani/Natural-image-matting)
 
 
-# 3. 导向滤波
+# 3. 导向滤波  引导滤波  guided filter
 [Guided filter for OpenCV](https://github.com/Ewenwan/guided-filter)
 
