--- a/国际会议.md
+++ b/国际会议.md
@@ -5,7 +5,9 @@
     IEEE：Piscataway, NJ
     USENIX：Berkeley，CA
 
+[IEEE 会议模板](https://www.ieee.org/conferences/publishing/templates.html)
 
+[IEEE 期刊模板](https://journals.ieeeauthorcenter.ieee.org/create-your-ieee-article/authoring-tools-and-templates/ieee-article-templates/)
 
 # 数据库 
 
