--- a/Python_Machine_Learning/机器学习工作要求.md
+++ b/Python_Machine_Learning/机器学习工作要求.md
@@ -28,3 +28,32 @@
     有实际成果并发表在国际顶级会议、期刊（如CVPR，ICCV，ECCV，NIPS，ICLR，TPAMI等）者优先
     有在ImageNet、MSCOCO、ICDAR等权威数据库上提交过结果并取得优异成绩者优先
     长期跟踪机器学习领域的研究论文
+    
+# 知识体系
+结构化的知识才有力量。水泥钢筯以科学的比例和结构组织在一起才能成为高楼大厦。人体的各个器官以正确的结构组合在一起，才能成为智慧的人类。知识也只有以合理的比例和结构组合在一起，才能发挥威力，而比例怎么分配，结构怎么规划，需要慎重思考，仔细计划，最后才是有针对性地学习。就像盖高楼大厦要先设计，再购买原料，最后施工一样，学习也要先设计知识结构，再制定学习计划，最后再有针对性地学习，完成知识体系的搭建。
+
+招聘要求中列出的知识点过多，并不是每一个都需要学，下面列出的知识点是学习AI过程中必须要学习的，但要求不同。这些知识点相互配合，搭建一个合理有效的关于AI的知识体系，不浪费过多精力，也没有缺失。
+
+## 一、预备知识
+    熟练使用python
+    熟练微积分、线性代数、概率论
+    熟练SQL操作
+    良好的算法基础
+    良好的数据结构基础
+## 二、大数据
+    熟练使用Spark
+    了解Hadoop、Storm、Flink
+## 三、机器学习
+熟练常用的机器学习算法模型：lr、knn、naive bayes、rf、gbdt、svm、pca、svd、kmeans、kmodes、rl、din、cnn、rnn、NN(LSTM/AlexNet/GoogleNet/ResNet等)、TL、LTR、CTR
+
+理解机器学习、深度学习、强化学习、迁移学习、异常检测
+
+理解分类、回归、聚类、标注等机器学习问题
+
+优秀的算法应用能力，包括特征提取、模型建立、效果评估、应用部署以及优化迭代等环节
+
+深入研究深度学习和搜索算法，熟悉自然语言处理、推荐算法、图像识别
+
+# 四、工具库
+    熟练使用TensorFlow，熟悉Keras，了解Caffe
+    熟练使用libSVM、sklearn、CRF++
