--- a/Python_Machine_Learning/机器学习工作要求.md
+++ b/Python_Machine_Learning/机器学习工作要求.md
@@ -62,3 +62,5 @@
 # 四、工具库
     熟练使用TensorFlow，熟悉Keras，了解Caffe
     熟练使用libSVM、sklearn、CRF++
+
+[机器学习算法总结](https://github.com/houchenl/AI/blob/9b3b9da55a89c3aa501396002b1b7c1ead1d117f/%E7%AE%97%E6%B3%95%E6%80%BB%E7%BB%93.md)
