--- a/Python_Machine_Learning/机器学习与优化.md
+++ b/Python_Machine_Learning/机器学习与优化.md
@@ -1,1 +1,110 @@
 # 机器学习与优化
+
+本书是机器学习实战领域的一本佳作，从机器学习的基本概念讲起，旨在将初学者引入机器学习的大门，并走上实践的道路。本书通过讲解机器学习中的监督学习和无监督学习，并结合特征选择和排序、聚类方法、文本和网页挖掘等热点问题，论证了“优化是力量之源”这一观点，为机器学习在企业中的应用提供了切实可行的操作建议。
+
+本书适合从事机器学习领域工作的相关人员，以及任何对机器学习感兴趣的读者。
+
+## 第1 章引言
+
+
+
+## 第2 章懒惰学习：最近邻方法
+
+
+## 第3 章学习需要方法
+
+
+## 第4 章线性模型
+
+
+## 第5 章广义线性最小二乘法
+
+
+## 第6 章规则、决策树和森林
+
+
+## 第7 章特征排序及选择
+
+
+## 第8 章特定非线性模
+
+
+
+## 第9 章神经网络：多层感知器
+
+
+## 第10 章深度和卷积网络
+
+
+
+## 第11 章统计学习理论和支持向量机
+
+
+## 第12 章最小二乘法和鲁棒内核机器
+
+
+
+## 第13 章机器学习中的民主
+
+
+
+
+## 第14 章递归神经网络和储备池计算
+
+
+## 第15 章自顶向下的聚类：K 均值
+
+
+## 第16 章自底向上（凝聚）聚类
+
+
+
+## 第17 章自组织映射
+
+
+
+## 第18 章通过线性变换降维（投影）
+
+
+## 第19 章通过非线性映射可视化图与网络
+
+
+
+## 第20 章半监督学习
+
+
+## 第21 章自动改进的局部方法
+
+
+## 第22 章局部搜索和反馈搜索优化
+
+## 第23 章合作反馈搜索优化
+
+
+
+## 第24 章多目标反馈搜索优化
+
+
+## 第25 章文本和网页挖掘
+
+
+## 第26 章协同过滤和推荐
+
+
+## 
+
+
+## 
+
+##
+
+
+
+## 
+
+
+## 
+
+## 
+
+
