--- a/Python_Machine_Learning/机器学习与优化.md
+++ b/Python_Machine_Learning/机器学习与优化.md
@@ -6,6 +6,38 @@
 
 ## 第1 章引言
 
+人不应该过着野兽般的生活，而是要追寻美德与知识。—————— 但丁
+
+### 1.1 学习与智能优化：燎原之火
+
+**优化是指为了找到更好的解决方案而进行的自动化搜寻过程。**可以说，流程、方案、产品和服务之所以能持续改进，正是缘于优化为之提供的强大动力。优化不仅关乎方案的确定（从一些给定的可行方案中，选出最好的一个），**它还能主动创造出新的解决方案。**
+
+**优化催生了自动化的创造和革新。**这看起来非常矛盾，因为自动化通常不会和创造与革新联系起来。因此，那些相信机器只能用来处理单调的重复性工作的人们在阅读本书时，会觉得书中的观点简直是胡言乱语，甚至会感受到如同被挑衅一般的愤怒。
+
+几乎所有的商业问题都可以归结为寻找一个最优决策值x， 这要通过使某个收益函数goodness(x) 最大化来实现。为了能形象地理解，我们假设有一个集合变量x = (x1; ... ; xn)，它描述的可以是一个或多个待调节的旋钮，也可以是将要做出的选择，还可以是待确定的参数。
+
+在市场营销中，x 可以是一个向量，其数值表示为各类宣传活动（电视、报纸、各种网站、社交媒体）分配的预算，goodness(x) 则可以是由这些宣传活动而产生的新客户数量(产生的新粉丝数量).
+
+在网站优化中，x 可以涉及图片、链接、话题和不同大小文本的使用，goodness(x) 则可以是该网站的普通访客成为客户的转化率。
+
+在工程学中，x 可以是一个汽车发动机的设计参数集，goodness(x)则可以是该发动机每加仑汽油所能行驶的英里数。
+
+将问题归结为**“优化一个收益函数”也激励着决策者，使用量化的目标，就可以用可衡量的方式来领会宗旨，也就可以专注于方针的制定而非执行的细枝末节。**当人们深陷于执行的泥潭中，以至于遗忘了目标时，企业就染上了“疫病”，此时如果外界环境发生了变化，这种“疫病”将会使企业无法做出及时的应对。
+
+**自动化**是解决这个问题的关键：将一个问题形式化地表述后，我们**把得到的收益模型输入计算机，计算机将自动创造出并找到一个或多个最佳的选项。**另外，当条件和重点发生改变时，只需要修改一下收益函数的量化目标，再重启优化过程就可以了。当然，CPU 时间会是个问题，也并非每次都能保证找到全局最优解决方案。但可以肯定的是，使用计算机来搜寻，无论是速度还是范围，都远远领先于人力搜寻，并且这一领先优势会越来越明显。
+
+然而，在大多数现实场景中，优化的惊人力量仍遭到很大程度的压制。优化在现实中没有被广泛采纳的主要原因是，**标准的数学优化理论假设存在一个需要最大化的收益函数**，也就是说，有一个明确定义的模型goodness(x) 为每个输入配置x 匹配一个结果。而目前，在现实的商业情境里，这个函数通常是不存在的。即使存在，靠人力找到这个函数也是极其困难、极其昂贵的。试想，问一个CEO“请您告诉我，优化您业务的数学公式是什么”，显然不是咨询工作中开始对话的最佳方式。当然，一个经理对于目标应该会有一些想法和权衡，但是这些目标并没有以数学模型的方式给定，它们是动态的、模糊的，会随着时间改变，并且受限于估计误差和人们的学习进程。**直觉被用来替代那些明确给定的、量化的和数据驱动的决策过程。**
+
+如果优化是燃料，那么点燃这些燃料的火柴就是机器学习。机器学习通过摒弃那种明确定义的目标goodness(x) 来拯救优化：我们可以**通过丰富的数据来建立模型。**
+
+
+机器学习与智能优化（learning and intelligent optimization，LION）结合了学习和优化，它从数据中学习，又将优化用于解决复杂的、动态的问题。LION 方法提高了自动化水平，并将数据与决策、行动直接联系起来。描述性分析和预测性分析之后，LION 的第三阶段（也是最终阶段）是规范性分析（prescriptive analysis）。在自助服务的方式中，决策者手中直接握有更多的权力，而不必求助于中间层的数据科学家。就像汽车的发动机一样，LION 包含一系列复杂的机制，但是用户（司机）并不需要知道发动机的内部工作原理，就可以享用它带来的巨大好处。在未来的几十年内，LION 方法带来的创新，将会像野火那样，以燎原之势延伸到大多数行业。那么企业就像野火频发的生态系统中的植物一样，只有适应并拥抱LION 技术才能生存下来，并繁荣昌盛；否则，无论之前如何兴盛，在竞争逐渐加剧的挑战面前，都可能土崩瓦解。
+
+LION 范式关注的并不是数学上的收益模型，而是海量数据，以及如何针对多种具体选择（包括实际的成功案例）进行专家决策，或者如何交互地定义成功的标准。当然，这些都是建立在让人们感觉轻松愉快的基础之上的。例如，在市场营销中，相关数据可以描述之前的资金分配和宣传活动的成效；在工程学中，数据可以描述发动机设计的实验（真实的或模拟的）和相应的油耗测量方式。
+
+### 1.2 寻找黄金和寻找伴侣
+
+
 
 
 ## 第2 章懒惰学习：最近邻方法
