--- a/Python_Machine_Learning/机器学习与优化.md
+++ b/Python_Machine_Learning/机器学习与优化.md
@@ -1,5 +1,7 @@
 # 机器学习与优化
 
+https://intelligent-optimization.org/LIONbook/
+
 本书是机器学习实战领域的一本佳作，从机器学习的基本概念讲起，旨在将初学者引入机器学习的大门，并走上实践的道路。本书通过讲解机器学习中的监督学习和无监督学习，并结合特征选择和排序、聚类方法、文本和网页挖掘等热点问题，论证了“优化是力量之源”这一观点，为机器学习在企业中的应用提供了切实可行的操作建议。
 
 本书适合从事机器学习领域工作的相关人员，以及任何对机器学习感兴趣的读者。
@@ -37,7 +39,52 @@ LION 范式关注的并不是数学上的收益模型，而是海量数据，以
 
 ### 1.2 寻找黄金和寻找伴侣
 
+用于优化的机器学习需要数据。数据来源可以是**以往的优化过程**，也可以是**决策者的反馈**。
 
+丹尼尔是一名南非的采矿工程师，他曾遇到一个问题：如何在一张地图上找到挖掘金矿的最佳坐标。
+大约在1951 年，他开创性地将统计学的思想应用于新金矿的估值，而这一方法仅需用到有限的几个矿坑。需要优化的函数是Gold(x)，即坐标x 处的金矿的金量。当然，在一个新的地方x 评估Gold(x) 是非常昂贵的。你可以想象，挖一个新矿没那么快，也没那么简单。但是在一些试探性的挖掘之后，工程师们会积累一些把坐标x1; x2; x3 ... 和金量Gold(x1); Gold(x2); Gold(x3) 关联起来的实例知识。克里金的直觉告诉他，用这些实例（**来自以往优化过程的数据**）可以建立起函数Gold(x) 的模型。这个称为GoldModel(x) 的模型归纳以往的实验结果，为地图上的每个位置x 给出金量的估计值。通过优化，这个模型找到使预计黄金产量GoldModel(x) 最大化的地点xbest，于是这个xbest 成为下一个挖掘的地点。
+
+这种技术现在被称为克里金法（Kriging），它背后的理念是未知点对应的值应该是其邻近已知点所对应的值的加权平均，权重与这些已知点到该未知点的距离相关。高斯过程、贝叶斯推断和样条函数（spline）都涉及了相关的建模方法。
+
+在一开始，待优化函数中的某些信息是不全面的，只有决策者才能够调整优化的过程。许多现实问题，即使不是大多数，都需要借助有学习参与的迭代过程来解决。在了解了越来越多的案例后，用户会认识并调节自己的喜好，系统会从用户的反馈中建立起他的喜好模型。这一过程将持续下去，直到用户满意或者直到耗尽为这一决策分配的时间。
+
+### 1.3 需要的只是数据
+商业领域里充斥着各种数字形式的数据。大数据指的是大量的半结构数据。顺便提一句，在20 世纪七八十年代，数据对于当时的存储设备来说是庞大的，而如今的“大数据”更多是商业上的宣传概念：即便是最大的公司产生的所有数据，只需一台PC 就足以处理了。
+
+随着社交网络的爆发、电子商务的迅速扩张和物联网的兴起，网络正在掀起一场由结构化和非结构化数据引起的海啸。这场海啸驱使人们在信息技术领域花费多达数十亿美元。也有新的证据表明，标准的商业智能平台使用率正在下降，这是因为企业界已经不得不开始考虑一些非结构化的数据，而这些数据拥有无法估量的现实价值。例如，社交网络产生大量的数据，其中的大多数无法分类，也无法用传统数据的刚性层次结构来表示。试想，你该如何评估Facebook 上一个“赞”的价值？况且非结构化数据需要用自适应方法来分析。再想想，随着时间的流逝，一个“赞”的价值会发生怎样的变化? 由于这类问题的存在，我们需要在数据建模、自适应学习和优化等领域运用更加先进的技术。
+
+为了让软件能够自我改进，并能快速适应新数据和调整后的业务目标，需要使用LION方法。这种方法的优势在于能够从过往的经验中学习、在工作中学习、应对不完全的信息，并快速适应新的情况，而这些能力通常只与人类的大脑联系起来。
+
+LION 技术这种内在的灵活性是至关重要的，因为在求解过程开始之前，我们很可能无法确定哪些是对决策有影响的因素和重点。例如，我们要给一个市场营销的前景评分来估计其价值，应该考虑哪些因素？这些因素又对结果分别有多大程度的影响? 如果使用LION 方法的话，这些问题的答案就是：“这些都不是问题。”系统会开始自我训练，源源不断的数据加上终端用户的反馈将快速提升系统的性能。专家||这里指营销经理||可以通过表达他们自己的观点来改善系统的输出。
+
+
+### 1.4 超越传统的商业智能
+
+每一家企业都需要数据来满足3 项基本需求：
+
+* (1) 了解目前的业务流程，并评估以往的表现；
+* (2) 预测商业决策的影响；
+* (3) 对业务的关键因素制定并执行明智且合理的决定，从而提升赢利能力。
+
+传统的描述型商业智能（business intelligence，BI）擅于记录和可视化过往的表现。构建这样的记录意味着需要聘请顶级顾问，或雇用那些有统计、分析和数据库等领域知识的专业人员。专家必须要设计数据提取和操作的流程，然后交给程序员来实际执行。这是一个缓慢而繁琐的过程，毕竟大多数商业的境况都是瞬息万变的。
+
+因此，那些严重依赖于BI 的企业正在利用性能快照，尝试理解当前情况和未来趋势，并对此做出反应。这就如同开车的时候只盯着后视镜，很有可能会撞上什么东西。现在对于企业来说，就像是已经撞到了一堵僵化的墙，并且缺乏快速适应变化的能力。
+
+**预测分析**确实在预见方案效果方面做得更出色，然而，**将数据驱动模型和优化进行整合，
+自动创建完善的解决方案，才是LION 真正的强大之处**。
+
+**规范性分析**做到了引领我们直接从数据到最佳改进方案，**以及从数据到可执行的洞察力，再到行动本身！**
+
+
+### 1.5 LION 方法的实施
+
+对于处在不同业务状态的企业而言，全面采用LION 方法作为商业实践的步骤会有所不同。更重要的是，相关数据的情况也会影响这一进程。显然，在数据收集完成的时候引进LION范式会相对容易，开销也更少。对某些企业来说，由于遗留系统的迁移和转换需要涉及大范围的整理，开销会非常大。这也正是那些老练的服务提供商能大显身手的地方。
+
+除了整理和定义相关数据的结构之外，最重要的一点就是建立起数据分析团队和商业终端用户之间的合作。LION 方法通过自身的特性提供了一种合作方式，助其共同发现蕴藏在结构化或半结构化数据中的潜能。数据分析团队能够和商业终端用户高效地并肩合作，关键在于能够使业务目标的不断变化迅速反映到模型上。LION 方法的引入可以帮助数据分析团队在价值创造链中产生根本性的变化，它能揭示隐藏的商机，也能加快他们的商业伙伴对客户要求和市场变化的反应速度。
+
+就业市场也将被打乱。从人类的实例中进行学习的软件将推导出我们在使用却又不明确了解的规则。这将消除进一步自动化的障碍，在许多需要适应性、常识和创造性的任务中，机器将会代替工人，也许会让中产阶级处在风险之中。
+
+LION 方法可以说是**一种极具颠覆性的发现隐藏价值的智能方法，它能快速适应改变并改进业务**。通过恰当的规划和实施，LION 技术可以帮助企业在竞争中独领风骚，避免被燎原之火灼伤，同时也可以帮助个人在高技能人才的就业市场中保持竞争力。
 
 
 ## 第2 章懒惰学习：最近邻方法
