--- a/Python_Machine_Learning/机器学习与优化.md
+++ b/Python_Machine_Learning/机器学习与优化.md
@@ -87,16 +87,162 @@ LION 技术这种内在的灵活性是至关重要的，因为在求解过程开
 LION 方法可以说是**一种极具颠覆性的发现隐藏价值的智能方法，它能快速适应改变并改进业务**。通过恰当的规划和实施，LION 技术可以帮助企业在竞争中独领风骚，避免被燎原之火灼伤，同时也可以帮助个人在高技能人才的就业市场中保持竞争力。
 
 
-## 第2 章懒惰学习：最近邻方法
+## 第2 章懒惰学习：最近邻方法--自然不允许跳跃
 
+如果你还记得小时候是如何识字的，那么你就可以理解什么是从实例中学习，尤其是监督学习。父母和老师给你展示一些带有英文字母（a、b、c，等等）的实例，然后告诉你：这是a，这是b。
+
+在监督学习中，由监督者（老师）给出一些已标记的实例，系统根据这些已标记的实例来完成训练。每一个实例是一个数列，它包括一个作为输入参数的向量x，称为**特征（feature）**，和与之相对应的输出标记y。
+
+那些懒惰的初学者在采蘑菇的时候遵循简单的模式。通常他们在采摘蘑菇之前没有学习任何相关的知识，毕竟，他们到特伦蒂诺是来度假的，而不是来工作的。当发现一个蘑菇时，他们会在书中寻找相似的图片，然后仔细检查对照细节列表中的相似特征。这就是机器学习中懒惰的“最近邻”（nearest neighbor）算法在实际问题中的一次应用。
+
+为什么这样一种简单的方法是有效的呢？我们可以用Natura non facit saltus（“自然不允许跳跃”的拉丁文）原则来解释它。自然的事物与特征常常是逐渐改变，而不是突然改变的。如果你将书中的一个可食用的蘑菇作为原型，然后发现你自己采摘的蘑菇与这个原型蘑菇的各项特征非常相似，那么你也许会认为你的蘑菇是可以食用的。
+
+在机器学习领域，最近邻方法的基本形式与基于实例的学习、基于案例的学习和基于记忆的学习有关。它的工作原理如下：我们把已标记的实例（包括输入及相应的输出的标记）储存起来，不进行任何操作，直到一个新输入模式需要一个输出。这种系统被称为懒惰的学习者：它们只是将这些实例储存起来，其他的什么也不做，直到用户询问它们。当一个新输入模式到达时，我们在存储器中查找到与这个新模式相近的那些实例，输出则由这些相近模式的输出所决定。
+
+一个更具健壮性和灵活性的方法是考虑大小为k 的近邻集合，而不仅仅是最相近的那一个，不难猜到这种方法被称为**K 近邻（KNN）方法**。它的灵活性来源于可以使用不同的分类方法。例如，新实例的输出可以用多数同意规则，即输出这k 个近邻中占大多数的那一个输出。如果想要更加安全的方法，可以仅在这k 个近邻的输出完全相同时才确定新实例的类别（一致同意规则），否则就输出“未知”。这个建议可以用在区分有毒的蘑菇时：如果输出“未知”，就联系当地警方寻求帮助。
+
+如果面临的是一个回归问题（预测一个实数，例如蘑菇中有毒物质的含量），我们可以将这k 个最相近的实例的输出平均值作为新实例的输出。当然，这k 个实例到新实例的距离可能有所差别，而且在某些情况下，距离较近的实例对新实例的输出影响更大是很合理的。在这种被称为**加权K 近邻（WKNN）**的方法中，权重取决于距离。
+
+y=sum(yi/(d(xi,x)+d0))/sum(1/(d(xi,x)+d0))
+
+其中d(xi; x) 指两个向量在属性空间中的距离（例如欧氏距离），d0 是一个小的偏移常数，用以避免出现0 作为除数的情况。d0 越大，距离较远的点的贡献就越大。如果d0 趋近于无穷大，那么这k 个实例的权重就几乎一样了。
+
+WKNN 算法很容易实现，并且相应的估计误差也很小。它的主要缺点是需要大量的内存空间，以及在测试阶段巨大的计算量。因此我们常常将已标记的实例进行聚类，用来减少所需的内存空间。聚类方法按照相似性将它们划分成一个个小组，并且只存储每个小组的原型（中心）。
+
+本书接下来将继续考虑新实例和内存中实例之间的距离，并且将这一想法一般化。核方法与局部加权回归就可看作最近邻方法的一般化，这两种方法并不是粗鲁地直接将远处的点排除，而是根据它们到查询点的距离，灵活地赋予它们相应的重要性（权重）。
+
+KNN（K 近邻）是一种原始的懒惰的机器学习方式：它只是把所有的训练实例存在存储器中（输入和对应的输出标记）。
+
+当有一个新输入并需要计算其对应的输出时，在存储器中查找k 个最接近的实例。读取它们的输出，并根据它们的大多数或平均值推导出新实例的输出。当存储了非常多的实例时，训练阶段的懒惰会让预测阶段的响应时间变得很长。
+
+相似的输入经常对应着相似的输出，这是机器学习领域的一个基本假设，因此KNN方法在很多实际案例中都有效。它与人类的某些“基于案例”的推理具有相似性。虽然这个方法简单粗暴，但它在很多现实案例中的效果都令人惊奇。
+
+从现在起，不要做一个懒惰的学习者，别以为这样可以高枕无忧。继续读下面的章节，坚持学下去。早起的鸟儿有虫吃，睡懒觉只能肚子空空了。
 
 ## 第3 章学习需要方法
+数据挖掘，名词，对数据进行的严刑逼供.如果拷打得足够久，它会向你坦白任何事情。
 
+无论是对于人类，还是对于机器来说，学习都是一种强大却又微妙的能力。真正的学习涉及如何从一个现象中提取深层次的、基础的关系，如何简要地概括各种不同的事件所遵循的规律，以及**如何通过发现基本的定律来统一解释不同的情况。**
+
+最重要的是，我们真正的目标是能够泛化的模型，以及模型对新实例的解释能力，新实例是指与训练实例来自同一个应用领域，但在学习阶段没有遇见过的实例，而从实例中学习仅仅是走向这一终点的途径之一。与此相反，死记硬背常常被认为是非常低效的学习方式，它虽然对初学者有一定的作用，但是无法使你成为真正的专家。如果目标是泛化，那么模型在学习集上的表现并不能保证泛化是正确的，还可能导致我们对结果过于乐观，因此要极其谨慎地估计这个模型的性能。**归根结底，只擅于死记硬背的学生日后在生活中未必能取得个人的成功。**
+
+事实上，开始机器学习流程之前，用户会根据直觉和智能在原始数据中提取一个具有代表性的子集，这一步是非常有用的。特征（或属性）是观察到的现象的各个可度量的性质，这些性质包含了与输出有关的有用的信息。这一准备阶段称为**特征选择（选出一个集）**，以及**特征提取（生成一个组合）**。
+
+**分类问题**（识别以特征x 描述的某一特定目标的类别）中，输出是类别的相应编码。输出y 属于一个有限集，例如yi = +-1，或者yi 属于{ 1,...,N}。例如，可以将蘑菇分为两类：可食用的和有毒的。
+
+**回归问题**的输出从一开始就是一个实数值，它的目标是通过建模研究因变量（输出值y）与一个或多个自变量（输入值x）之间的关系。例如，根据蘑菇的特征来预测其有毒物质的含量。
+
+### 从已标记的案例中学习：最小化和泛化
+
+监督学习方法使用实例构造一个函数y = f(x)，将输入x 和输出y 关联起来。这一关联选自一个灵活的模型f(x;w)，其中的灵活性来自可调整的参数（即权重系数）w。
+
+在许多情况下，特征提取需要一些来自人类的洞见，然而最优参数的确定则是完全自动的，这也是这一方法被称为机器学习的原因。**让模型对训练集中的实例进行正确的分析，从而确定那些自由参数。**
+
+如果需要优化的函数是可微的，一个简单的方法是使用梯度下降（gradient descent）。人们可以重复地计算这个函数关于权重的梯度，并朝着负梯度的方向移动一小步。事实上，这是神经网络里很流行的一种技术，称为基于误差反向传播（backpropagation）的学习.
+
+偏差-方差困境可表述如下:
+
+* 参数过少的模型会因较大的偏差而失准：它们缺乏灵活性。
+* 参数过多的模型则会因较大的方差而失准：它们对于样本中的细节过于敏感（细节中的改变将会使模型产生大的变化）。
+* 找到最佳模型需要控制“模型复杂度”，即模型的结构和参数数量都要恰到好处，从而在偏差和方差之间达成折中方案。
+
+区分监督分类的两类方法也是有意义的。第一类热衷于得到某个关于输入是如何产生输出的“构造性的模型”；第二类更在意结果，即获得正确的分类。前者关心对内在机制的解释，后者则单纯地在意其性能。
+
+第一类情况下，生成方法（generative method）尝试在实例中建模，为不同的类型y 生成实测数据x 的过程进行建模。给定某个类，比如有毒的蘑菇，它具有某种外形的概率是多少？
+
+判别算法（discriminative algorithm）就不会尝试建模数据的生成过程，它们直接估计p(yjx)，这个问题在某些情况下比之前生成方法的两步过程（首先建模p(xjy)，然后才导出p(yjx)）要更简单。判别型方法的例子包括多层感知器神经网络，以及支持向量机（SVM）等，接下来的章节里将会讨论。
+
+判别算法所示的捷径具有深远意义，我们不必知道某些类别如何产生输入实例，也不必为此建立一个详尽的模型，就可以构造精确的分类器。想要不用冒着生命危险去采摘蘑菇，并不需要成为真菌学家，你只需要大量有代表性的蘑菇实例集，并且它们已经正确地分好了类。
+
+认识到不需要成为某个领域的专家就可以做出贡献，这是个人的一小步，却是LION 发展道路上的一大步。不用说，成功的企业用朴实低调而又功能强大的数据驱动和优化驱动的工具，弥补了专业知识方面的缺憾。
+
+
+
+### 3.2 学习、验证、测试
+
+基于已标记实例的学习要求我们采用细致的实验程序来测量学习过程的效果。尤其注意，不能将已经用于训练的实例再用于测试学习系统的性能，如果这么做，将是一个可耻且无法原谅的错误。机器学习的目标是获得一个拥有泛化能力的系统，用以分析新的或以往未见过的数据；否则，这个系统就不是在学习，而只是记住了一些已经知道的模式，这也是学校不停更换考试题的原因.
+
+然而现实可能与理想相差甚远。一些情况下，训练集是相当小的，并且需要尽可能保证它们能同时满足训练和性能测试的要求。这种情况下，实例集必须清楚地分为训练集和验证集，前者用来训练，后者用来测试性能.
+
+一个典型的性能测试是系统输出与监督者给出的正确输出之间的均方根（root mean square，RMS）误差。值集的RMS 值是原始值的平方的算术平均的平方根。
+
+一般而言，学习过程通过优化模型参数以使得模型尽可能好地拟合训练数据的输出。那样的话，如果我们从验证数据的同一个总体中取一个独立的抽样作为训练数据，一般会导致验证数据集的误差大于训练数据集的误差。如果训练过度的话，这种差异很可能会变得非常严重，并导致**过拟合（过度训练）**。当训练实例很少，或者模型中的参数很多时，更容易发生这种情况。
+
+分层交叉验证（strati¯ed cross-validation）作为一种改进，可以避免训练集和测试集中不同类的平衡问题。它能够避免有时发生这种情况，即某一个类在训练集中很多，而在验证集中很少（相对于所有实例的平均出现率）。应用分层能够分别从每个类别中抽取出K 个测试样本，以保证不同类别的实例分布均衡。
+
+### 3.3 不同类型的误差
+在测试一个模型的性能时，各种各样的误差带来的影响并不一样。如果你将有毒的蘑菇当作可食用的，你可能会有生命危险；如果你将可食用的蘑菇当作有毒的，你只是浪费了一点时间。根据问题的不同，确定最佳分类的标准也随之改变。考虑一个二元分类（输出“是”或者“否”）。一些可能的标准是：准确率（accuracy）、精确率（precision）和召回率（recall）。虽然它们的定义都很简单，但是需要小心区分以避免混淆（见图3-4）。
 
 ## 第4 章线性模型
+大多数惯用右手的人拥有线性思维， 爱用传统的方式思考。（读者可以自由选择是否相信我们的开场白。）
 
 
-## 第5 章广义线性最小二乘法
+优化的强大力量建立在拥有神奇力量的线性代数上。你是否记得在学校里老师说“好好学习线性代数，你会受益终身”？好吧，多年以后你会发现他是对的。线性代数是“数学生存工具包”，当你面临一个棘手的问题时，应该首先试试线性方程组。在很多情况下，即使你不能用线性代数直接解决这些问题，至少也能得到一个不错的逼近。这不足为奇，解释数据的模型也是这样的。
+
+### 4.1 线性回归
+
+输入与输出特征的线性相关是一个广泛采用的模型。这一模型十分简单，并且训练起来很容易。另外，模型中每一项的权重系数都为这一项对应的特征的重要性提供了直观的解释：某一项权重系数的绝对值越大，对应的属性的影响就越大。所以，为了不让问题变得复杂，不要轻易尝试非线性模型，除非你的理由十分充足。
+
+
+### 4.4 大脑是如何工作的
+可以肯定的是，计算两个很大数的和的系统，与玩“赶尽杀绝”这类动作游戏的系统是很不一样的。进行逻辑演算或推理的系统认出母亲的脸的系统也是很不一样的。前一种系统是迭代的，它的工作方式是按照顺序的步骤来进行的，需要有意识地努力集中注意力。后一种系统以并行的方式工作，速度很快，无须太多努力，以非符号的方式（不会用到符号和逻辑）工作。
+
+机器学习中的不同机制可以模仿这两类系统。线性判别器运用迭代梯度下降的学习方法来逐步改进，它更多模仿的是非符号系统；基于一连串“如果{那么{否则”规则（后面的章节将会提到它们）的分类树更多模仿的是逻辑系统。
+
+
+### 4.5 线性模型为何普遍，为何成功
+
+线性模型如此普遍的深层原因是存在于许多或大部分物理现象中的平滑性（“自然不允许跳跃”）。图4-5 中的例子表明，青少年的平均身高随着年龄逐渐增长，而不是跳跃式地增长，直到青春期之后慢慢停滞。
+
+### 4.6 最小化平方误差和
+
+线性模型通过最小化式(4.2) 中的平方误差和确定下来。
+
+### 4.7 数值不稳定性和岭回归
+实数（比如pi 和“大多数”的数）无法在数字计算机中表示出来，它们是“伪的”。数字计算机中的每个数都被赋以一个固定的有限的二进制数，没有方法来表示一个无限数位的数，像3:14159265 : : :。因此，在计算机中表示的实数都是“伪的”，它们能并且经常造成误差。误差会在数学运算的过程中不断传播，在某些情况下，一连串运算的结果可能与数学上的结果相差甚远。找一个矩阵，求它的逆矩阵，并且将二者相乘。你期望会得到单位矩阵，但最后你却得到一个不同的答案。也许你应该查查银行使用的小数精度。
+
+如果没有办法来改变训练样本点的选择，而样本点又没有如愿地分布时，用以保证数值稳定性的数学工具是岭回归（ridge reghression）。它在需要最小化的（最小二乘）误差函数中加入了一个正则化（regularization）项 w转置*w
+
+
+
+传统的线性回归模型（一组输入{输出对的线性逼近）通过最小化线性模型预测值与训练样本输出值之间的平方误差和来找到可能的最好的实验数据线性拟合。最小化可以是“一招制胜”，通过推广线性代数中的矩阵求逆，也可以通过迭代的方式逐步修改模型参数并降低误差。广义逆法可能是拟合实验数据的最常用的技术。
+
+在分类中，线性模型旨在用线条、平面与超平面来分离实例。要确定分离平面，人们可以要求把输入值映射到两个不同的输出值（如+1 和¡1）并使用回归。考虑到泛化性，找到健壮的分离超平面的更先进的技术是下面章节中将会描述的支持向量机。
+
+计算机中不存在实数，它们只能用有限大小的二进制数字逼近，而这可能会导致误差
+和不稳定（样本点的小扰动导致结果变化较大）。
+
+一些机器学习方法与生物大脑从经验和功能中的学习方式存在松散的联系。学习骑自行车与符号逻辑方程无关，而是关于如何进行逐步调整以及⋯⋯迅速从初始的事故中恢复过来。
+
+
+## 第5 章广义线性最小二乘法--如无必要，勿增实体。
+一个严谨的建模工作的输出并不是一个单一的“带走它或者留下它”的模型。通常，人们通过评价一个模型的性能（拟合的优劣）来处理多种建模体系结构，通过确定模型参数估计值的置信区间（例如误差线）来选择尽可能好的架构，等等。读完本章之后，你应当可以从一个普通用户变成专业的最小二乘法大师。
+
+学习数据显著的模式和关系，意味着需要消除非显著的细节，例如测量噪声（由物理测量中有限精度导致的随机误差）。想想如何建模一个人的身高随着年龄改变的趋势。如果你重复用高精密仪器测量你的身高，那么每个测量会得到不同的值。这些带噪声的测量反映了一个简单的事实，那就是只能用有限的数位来描述你的身高（没有哪个精神正常的人会回答自己的身高是1823477 微米）。
+
+### 5.1 拟合的优劣和卡方分布
+
+在统计学中，如果一个模型倾向于描述随机误差或噪声而不是数据间的基本关系，那么就会产生**过拟合（over-ftting）现象**。当一个模型过于复杂时，例如相对于可用的数据量有太多的自由度（在我们多项式的例子中，就是有太多的参数），过拟合现象就会产生。
+
+一般来说，过拟合模型的预测性能会很差。如果用人类的行为来打比方，可以想想教学：如果一个学生只关注并记住老师在课堂上讲的一些细节（例如数学课上某个特定练习的细节），而不是提炼并理解基本的规则和意义，他只能靠着记忆空洞地重复老师的字眼，却无法将他的知识举一反三应用到新案例上。
+
+### 5.2 最小二乘法与最大似然估计
+
+了解广义最小二乘拟合的基本方法后，现在从统计学的角度来思考一些附加的动机。鉴于我们有选择不同模型的自由，比如拟合多项式的次数，那么用于辨别最佳模型构架的方法将是十分珍贵的，毕竟不能仅仅依靠肤浅的“目测卡方”方法。
+
+下面是最小二乘拟合的过程。
+* (1) 假设大自然和实验程序（包括测量）会产生独立的实验样本(xi; yi)。假设yi 的测量值受到了误差的影响，这个误差服从正态（即高斯）分布。
+* (2) 如果模型参数c 是已知的，那么就可以估计我们测量数据的概率。在统计学的术语中，这叫作数据的似然率（likelihood）。
+* (3) 最小二乘拟合所找到的就是使得我们数据的似然率最大化的参数。最小二乘是一种最大似然估计（maximum likelihood estimator）。从直觉上来说，这使得选择的模型和观察到的数据之间的“契合度”最大化。
+
+### 5.3 置信度的自助法
+
+
+多项式拟合以一种特定的方式使用线性系数模型（linear-in-the-coe±cients model）来处理非线性问题。该模型包括（待定）系数的线性加权和乘以原始的输入变量的积。如果积被替换为输入变量的任意函数，相同的技术也可以使用，只要这个函数是固定的（函数中没有自由参数，仅作为乘法系数）。通过最小化平方误差来确定最优系数，这就意味着求解一组线性方程组。如果系数的数目大于输入{输出实例数，会出现过拟合（over-¯tting），用这样的模型来推断新输入值的输出结果是危险的。
+
+多项式拟合的优度（goodness of a polynominal fit）可以通过预测观察到与实测数据的差异的概率来评价（给定了模型参数后数据的似然率）。如果这个概率很低，那么不应该太过于信任该模型。但关于误差如何生成的错误假设容易导致我们得出过于乐观或过于悲观的结论。统计从假设开始建立坚实的科学建筑。如果建立在无效假设的沙土上，即使最坚实的统计建筑也会倒塌粉碎。幸运的是，基于可行性强的大规模计算的方法（例如交叉验证）是容易理解的，并且具有健壮性。
+
+像自助法（bootstrapping）这样“荒谬”的方法（对同一数据进行带放回的再抽样，并以蒙特卡罗的方式重复估计过程），可以用于获取估计的参数值周围的置信区间。你不过是最大化了自己被当成线性最小二乘法大师的概率。
 
 
 ## 第6 章规则、决策树和森林
